--- a/style/beheer.css
+++ b/style/beheer.css
@@ -23,6 +23,9 @@
   background-color: #172a32;
   border-radius: 1rem;
 }
+.beewaylijsttable tr:hover {
+  background-color: #595959;
+}
 
 .beewaylijstopties {
   /* width: 42%;
@@ -131,12 +134,13 @@
   box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
 }
 #adduserbtn {
-  bottom: 20px;
-  right: 35%;
+  bottom: 45px;
+  right: 45%;
 }
-#password-validation {
+#password-validation,
+#passwordchangewarning {
   font-size: 15px;
-  color: orange;
+  color: #ff8533;
   font-weight: bold;
 }
 
@@ -162,8 +166,9 @@
   position: absolute;
   background: #4d4d4d;
   margin-top: -20px;
-  width: 75%;
+  width: 41.5%;
   font-size: 20px;
+  z-index: 1;
 }
 #checkboxes label {
   margin: 4px 0px;
@@ -175,6 +180,10 @@
 }
 #checkboxes input {
   margin: 0px 9px;
+}
+
+#editedby {
+  color: white;
 }
 
 input[type='radio'],
