--- a/style/beheer.css
+++ b/style/beheer.css
@@ -113,6 +113,10 @@
   float: left;
 }
 
+#addfirst {
+  
+}
+
 /*---------------------klassen toevoegen/aanpassen-------------------*/
 
 /*---------------------vakken toevoegen/aanpassen--------------------*/
