beewaylist almost done and started with beeway style

--- a/style/beewaystyle.css
+++ b/style/beewaystyle.css
@@ -61,13 +61,13 @@ div.cell h2 {
 }
 
 
-.textareaplaning textarea {
+.textareaplaning {
   resize: none;
   width: calc(100% + 20px);
   height: 40px;
   margin: -5px -10px;
 }
-.textareaobservatie textarea {
+.textareaobservatie {
   resize: none;
   width: calc(100% + 20px);
   height: 66.5px;
