--- a/style/beewaystyle.css
+++ b/style/beewaystyle.css
@@ -61,17 +61,11 @@ div.cell h2 {
 }
 
 
-.textareaplaning {
-  resize: none;
-  width: calc(100% + 20px);
-  height: 40px;
-  margin: -5px -10px;
-}
 .textareaobservatie {
   resize: none;
-  width: calc(100% + 20px);
+  width: calc(100% + 5px);
   height: 66.5px;
-  margin: -5px -10px;
+  margin: -5px 0;
 }
 
 #orange {
